Migrate from org.jmockit:jmockit:1.50 to com.github.hazendaz.jmockit:jmockit:2.1.0
Co-authored-by: nixel2007 <1132840+nixel2007@users.noreply.github.com>